--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <i class="fa fa-whatsapp" style="font-size:30px; color: green;margin-right: 10px;"></i> <!-- WhatsApp -->
                     <i class="fa fa-instagram" style="font-size:30px; color: black;margin-right: 10px;"></i> <!-- LinkedIn -->
                     <br>
-                    <p style="font-size: 18px;">Get Social with us !</p>
+                    <p style="font-size: 18px;  margin-top: -100px;">Get Social with us !</p>
                 </div>
             </div>
         </div>
@@ -46,19 +46,17 @@
                 <div class=" collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 " style="margin-left: 50px;"> <!-- Removed style="align-items: center;" -->
                         <li class="nav-item">
-                            <a class="nav-link li-div" aria-current="page" href="#" style="color: white;font-size: 25px;margin-right: 15px;">Home</a>
+                            <a class="nav-link li-div" aria-current="page" href="index.html" style="color: white;font-size: 25px;margin-right: 15px;">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link li-div" style="color: white;font-size: 25px;margin-right: 15px;" href="#">About US</a>
+                            <a class="nav-link li-div" style="color: white;font-size: 25px;margin-right: 15px;" href="about.html">About US</a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link li-div" style="color: white;font-size: 25px;margin-right: 15px;" href="#">Campases</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link li-div" style="color: white;font-size: 25px;margin-right: 15px;" href="#">Admissions</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link li-div" style="color: white;font-size: 25px;margin-right: 15px;" href="#">Cumpases</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link li-div" style="color: white;font-size: 25px;margin-right: 15px;" href="#">Contact</a>
+                            <a class="nav-link li-div" style="color: white;font-size: 25px;margin-right: 15px;" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -97,17 +95,26 @@
                       <div class="container-fluid">
                         <div class="row">
                             <div class="col-lg-6 col-md-12">
-                                <h4>Admissions Are Open</h4>
-                                   <p>We are thrilled to announce that admissions are now open at Mariam International Public School! At Mariam International Public School,
-                                     we pride ourselves on providing a nurturing and dynamic learning environment where students are encouraged to 
-                                     excel academically, creatively, and personally. Our dedicated team of educators is committed to fostering a 
-                                     love for learning while equipping students with the skills and knowledge they need to succeed in an 
-                                     ever-changing world. With state-of-the-art facilities, innovative teaching methodologies, and a diverse 
-                                     range of extracurricular activities, Mariam International Public School aims to cultivate well-rounded individuals who are prepared to make a positive impact on society.
-                                      Join us on this exciting educational journey and unlock your full potential at Mariam International Public School. Apply now and embark on a path to a bright future!</p>
-                                    <button class="ad-btn mb-2"><a href="contact.html"> Contact For Admissons</a></button>
+                              <h4>Our Proud Students</h4>
+                              <p>
+                                Our proud students stand as beacons of achievement, embodying the very essence of excellence and
+                                 perseverance. With each step they take, they illuminate the path towards greatness, demonstrating
+                                  resilience, creativity, and unwavering determination. Whether excelling in academics.
+                              </p>
+                              <img src="Images/students/std4.jpeg" class="w-100" alt="">
                             </div>
+
                             <div class="col-lg-6 col-md-12">
+                              <h4>Admissions Are Open</h4>
+                              <p>We are thrilled to announce that admissions are now open at Mariam International Public School! At Mariam International Public School,
+                                we pride ourselves on providing a nurturing and dynamic learning environment where students are encouraged to 
+                                excel academically, creatively, and personally.
+                                Our dedicated team of educators is committed to fostering a love for learning while equipping students with
+                                 the skills and knowledge they need to succeed in an ever-changing world. With state-of-the-art facilities, 
+                                 innovative teaching methodologies, and a diverse range of extracurricular activities, Mariam International Public School aims to 
+                                 cultivate well-rounded individuals who are prepared to make a positive impact on society. Join us on this exciting
+                                  educational journey and unlock your full potential at Mariam International Public School. Apply now and embark on a
+                                   path to a bright future! </p>
                                 <img src="Images/new/ad2.jpeg" class="w-100" alt="">
                             </div>
                         </div>
@@ -182,10 +189,8 @@
                             <h2>Enter to Learn </h2>
                             <h2>Leave to Serve </h2>
                             <h1>Mariam International Publich School</h1><br><br>
-                            <p>Discover the MariamInternational Publich SchoolDifference today and embark on a journey of academic 
-                                excellence, personal growth, and endless possibilities.<br> Our commitment to 
-                                providing a holistic education, coupled with a supportive community and innovative
-                                 learning experiences, ensures that every student thrives.</p>
+                            <p>Discover the MariamInternational Publich SchoolDifference <br> today and embark on a journey of academic 
+                                excellence, personal growth, and endless possibilities.<br> </p>
                         </div>
                     <!-- Footer Section Complete-->
 
