Contact Page and admision page

--- a/campus.html
+++ b/campus.html
@@ -68,12 +68,12 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-6 col-md-12 about-1">
-                            <h4>Contact Us</h4>
+                            <h4>Campases Infromation</h4>
                         </div>
                         <div class="col-lg-6 col-md-12 about-2">
                             <a href="index.html">Home</a>
                             /
-                            <a href="contact.html" class="about-3">Contact Us</a>
+                            <a href="campus.html" class="about-3">Campases</a>
                         </div>
                     </div>
                 </div>
@@ -82,25 +82,15 @@
                 <!-- Contact Section Start -->
                 <div class="container">
                     <div class="row">
-                        <div class="col">
-                          <center>  
-                            <h1>Contact Us</h1>
-                            
-                            <p style="font-size: 20px;"><i class="fa fa-university" style="font-size:30px; color: black;"></i> <span style="font-weight: 900;">Main Branch</span> Main Phalina Road Near Nadra office Kallar Syedan
-                            </p>
-
-                            <p style="font-size: 20px;"><i class="fa fa-university" style="font-size:30px; color: black;"></i> <span style="font-weight: 900;"> 2nd Branch</span> Agla Morha Darkali Sher Shahi
-                            </p>
-
-                            <p style="font-size: 20px;"><i class="fa fa-phone" style="font-size:30px; color: black;"></i> <span style="font-weight: 900;"> 03325493577</span> Mon - Sat 8am to 2pm
-                            </p>
-
-                            <p style="font-size: 16px;"><i class="fa fa-envelope" style="font-size:30px; color: black;"></i> <span style="font-weight: 900;"> 
-                                MIPSKALLAR@GMAIL.COM</span> Send us your query anytime!
-                            </p>
-
-                            
-                          </center>
+                        <div class="col-lg-6 col-md-12 mb-3 mt-4">
+                            <h2>Main Branch</h2>
+                        <h5>Main Phalina Road Near Nadra office Kallar Syedan</h5>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3330.2353024226!2d73.36263607451848!3d33.41710925100207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dff9ba94107bd3%3A0x288e769545b1da25!2sNadra%20E%20Sahulat!5e0!3m2!1sen!2s!4v1714548510889!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                        <div class="col-lg-6 col-md-12 mb-3 mt-4" >
+                            <h2>2nd Branch</h2>
+                        <h5>Agla Morha Darkali Sher Shahi</h5>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3330.0040237635344!2d73.33904967451883!3d33.423139450688694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dff91f47719169%3A0xadd709a54999f9b8!2sDarkali%20Sher%20Shahi!5e0!3m2!1sen!2s!4v1714548731695!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
