--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link li-div" style="color: white;font-size: 25px;margin-right: 15px;" href="#">Campases</a>
+                            <a class="nav-link li-div" style="color: white;font-size: 25px;margin-right: 15px;" href="campus.html">Campases</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link li-div" style="color: white;font-size: 25px;margin-right: 15px;" href="contact.html">Contact</a>
