--- a/campus.html
+++ b/campus.html
@@ -8,6 +8,8 @@
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
    <!-- Font Awesome CSS -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,17 +20,21 @@
          <!-- Header Section -->
          <div class="container">
             <div class="row first-row">
-                <div class="col-lg-6 col-md-12 logo-div">
+                <div class="col-lg-6 col-md-12 logo-div" data-aos="flip-left"  data-aos-duration="3000">
                     <img class="logo" src="Images/logo.png" alt="">
                 </div>
 
-                <div class="col-lg-6 col-md-12 social-media">
-                    <i class="fa fa-facebook"  style="font-size:30px; color: blue; margin-right: 10px;"></i> <!-- Facebook -->
+                <div class="col-lg-6 col-md-12 social-media" data-aos="flip-right"  data-aos-duration="3000">
+                    <!-- <i class="fa fa-facebook"  style="font-size:30px; color: blue; margin-right: 10px;"></i> 
                     <i class="fa fa-envelope" style="font-size:30px; color: orange;margin-right: 10px;"></i>
-                    <i class="fa fa-whatsapp" style="font-size:30px; color: green;margin-right: 10px;"></i> <!-- WhatsApp -->
-                    <i class="fa fa-instagram" style="font-size:30px; color: black;margin-right: 10px;"></i> <!-- LinkedIn -->
+                    <i class="fa fa-whatsapp" style="font-size:30px; color: green;margin-right: 10px;"></i> 
+                    <i class="fa fa-instagram" style="font-size:30px; color: black;margin-right: 10px;"></i>  -->
+                    <a href="https://www.facebook.com/MariamInternationalPublicSchoolSystem?mibextid=ZbWKwL"><img class="social-logos1" src="Images/Social/fb1.png" alt=""></a>
+                    <a href="https://whatsapp.com/channel/0029VaeF8b9AO7R7xANt6p2B"><img class="social-logos1" src="Images/Social/whatsapp1.png" alt=""></a>
+                    <a href=""><img class="social-logos1" src="Images/Social/linkdn.png" alt=""></a>
+                    <a href=""><img class="social-logos1" src="Images/Social/email.png" alt=""></a>
                     <br>
-                    <p style="font-size: 18px;  margin-top: -100px;">Get Social with us !</p>
+                    <!-- <p style="font-size: 18px;  margin-top: -100px;">Get Social with us !</p> -->
                 </div>
             </div>
         </div>
@@ -82,12 +88,14 @@
                 <!-- Contact Section Start -->
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 mb-3 mt-4">
+                        <div class="col-lg-6 col-md-12 mb-3 mt-4" data-aos="fade-up"
+                        data-aos-duration="3000">
                             <h2>Main Branch</h2>
                         <h5>Main Phalina Road Near Nadra office Kallar Syedan</h5>
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3330.2353024226!2d73.36263607451848!3d33.41710925100207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dff9ba94107bd3%3A0x288e769545b1da25!2sNadra%20E%20Sahulat!5e0!3m2!1sen!2s!4v1714548510889!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
-                        <div class="col-lg-6 col-md-12 mb-3 mt-4" >
+                        <div class="col-lg-6 col-md-12 mb-3 mt-4" data-aos="fade-up"
+                        data-aos-duration="3000">
                             <h2>2nd Branch</h2>
                         <h5>Agla Morha Darkali Sher Shahi</h5>
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3330.0040237635344!2d73.33904967451883!3d33.423139450688694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dff91f47719169%3A0xadd709a54999f9b8!2sDarkali%20Sher%20Shahi!5e0!3m2!1sen!2s!4v1714548731695!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -106,7 +114,10 @@
         <!-- Copy Righ Complete-->
     </div>
     
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
