--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
    <!-- Font Awesome CSS -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,18 +18,22 @@
     <div class="container-fluid">
         <!-- Header Section -->
         <div class="container">
-            <div class="row first-row">
+            <div class="row first-row" data-aos="flip-left" data-aos-duration="3000">
                 <div class="col-lg-6 col-md-12 logo-div">
                     <img class="logo" src="Images/logo.png" alt="">
                 </div>
 
-                <div class="col-lg-6 col-md-12 social-media">
-                    <i class="fa fa-facebook"  style="font-size:30px; color: blue; margin-right: 10px;"></i> <!-- Facebook -->
+                <div class="col-lg-6 col-md-12 social-media" data-aos="flip-right" data-aos-duration="3000">
+                    <!-- <i class="fa fa-facebook"  style="font-size:30px; color: blue; margin-right: 10px;"></i> 
                     <i class="fa fa-envelope" style="font-size:30px; color: orange;margin-right: 10px;"></i>
-                    <i class="fa fa-whatsapp" style="font-size:30px; color: green;margin-right: 10px;"></i> <!-- WhatsApp -->
-                    <i class="fa fa-instagram" style="font-size:30px; color: black;margin-right: 10px;"></i> <!-- LinkedIn -->
+                    <i class="fa fa-whatsapp" style="font-size:30px; color: green;margin-right: 10px;"></i> 
+                    <i class="fa fa-instagram" style="font-size:30px; color: black;margin-right: 10px;"></i>  -->
+                    <a href="https://www.facebook.com/MariamInternationalPublicSchoolSystem?mibextid=ZbWKwL"><img class="social-logos1" src="Images/Social/fb1.png" alt=""></a>
+                    <a href="https://whatsapp.com/channel/0029VaeF8b9AO7R7xANt6p2B"><img class="social-logos1" src="Images/Social/whatsapp1.png" alt=""></a>
+                    <a href=""><img class="social-logos1" src="Images/Social/linkdn.png" alt=""></a>
+                    <a href=""><img class="social-logos1" src="Images/Social/email.png" alt=""></a>
                     <br>
-                    <p style="font-size: 18px;  margin-top: -100px;">Get Social with us !</p>
+                    <!-- <p style="font-size: 18px;  margin-top: -100px;">Get Social with us !</p> -->
                 </div>
             </div>
         </div>
@@ -71,10 +76,10 @@
                             <img class="slider-img" src="Images/students/std3.jpeg" class="d-block " alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img class="slider-img" src="Images/s-3.JPG" class="d-block " alt="...">
+                            <img class="slider-img" src="Images/students/std1.jpeg" class="d-block " alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img class="slider-img" src="Images/students/std1.jpeg" class="d-block " alt="...">
+                            <img class="slider-img" src="Images/pstd.jpeg" class="d-block " alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev m-5 slider-btn" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -94,24 +99,25 @@
                       <!-- Admision Section Start -->
                       <div class="container-fluid">
                         <div class="row">
-                            <div class="col-lg-6 col-md-12">
+                            <div class="col-lg-6 col-md-12" data-aos="fade-up"
+                            data-aos-duration="3000">
                               <h4>Our Proud Students</h4>
                               <p>
                                 Our proud students stand as beacons of achievement, embodying the very essence of excellence and
                                  perseverance. With each step they take, they illuminate the path towards greatness, demonstrating
                                   resilience, creativity, and unwavering determination. Whether excelling in academics.
                               </p>
-                              <img src="Images/students/std4.jpeg" class="w-100" alt="">
+                              <img src="Images/pstd.jpeg" class="w-100" alt="">
                             </div>
 
-                            <div class="col-lg-6 col-md-12">
+                            <div class="col-lg-6 col-md-12" data-aos="fade-up"
+                            data-aos-duration="3000">
                               <h4>Admissions Are Open</h4>
                               <p>We are thrilled to announce that admissions are now open at Mariam International Public School! At Mariam International Public School,
                                 we pride ourselves on providing a nurturing and dynamic learning environment where students are encouraged to 
                                 excel academically, creatively, and personally.
                                 Our dedicated team of educators is committed to fostering a love for learning while equipping students with
-                                 the skills and knowledge they need to succeed in an ever-changing world. With state-of-the-art facilities, 
-                                 innovative teaching methodologies, and a diverse range of extracurricular activities, Mariam International Public School aims to 
+                                 the skills and knowledge they need to succeed in an ever-changing world.  Mariam International Public School aims to 
                                  cultivate well-rounded individuals who are prepared to make a positive impact on society. Join us on this exciting
                                   educational journey and unlock your full potential at Mariam International Public School. Apply now and embark on a
                                    path to a bright future! </p>
@@ -126,7 +132,8 @@
                     <!-- Feature Section Start -->
                         <div class="container-fluid">
                           <div class="row">
-                            <div class="col-lg-12 ">
+                            <div class="col-lg-12" data-aos="fade-up"
+                            data-aos-duration="3000">
                               <div class="section-title text-left">
                                 <h2>
                                   Features That
@@ -137,7 +144,8 @@
                                 </p>
                               </div>
                             </div>
-                            <div class="col-lg-4 col-md-6">
+                            <div class="col-lg-4 col-md-6" data-aos="fade-up"
+                            data-aos-duration="3000">
                               <div class="single-blog-post">
                                 <img src="Images/lib.jpg" class="img-fluid w-100" alt="" />
                                 <div class="text">
@@ -151,7 +159,8 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 mt--160">
+                            <div class="col-lg-4 col-md-6 mt--160" data-aos="fade-up"
+                            data-aos-duration="3000">
                               <div class="single-blog-post">
                                 <img src="Images/lib2.jfif" class="img-fluid w-100" alt="" />
                                 <div class="text">
@@ -165,7 +174,8 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 mt--260">
+                            <div class="col-lg-4 col-md-6 mt--260" data-aos="fade-up"
+                            data-aos-duration="3000">
                               <div class="single-blog-post">
                                 <img src="Images/lib3.jfif" class="img-fluid w-100" alt="" />
                                 <div class="text">
@@ -186,8 +196,7 @@
 
                     <!-- Footer Section Start-->
                         <div class="container-fluid footer-sec">
-                            <h2>Enter to Learn </h2>
-                            <h2>Leave to Serve </h2>
+                            <h2>Enter to Learn Leave to Serve </h2>
                             <h1>Mariam International Publich School</h1><br><br>
                             <p>Discover the MariamInternational Publich SchoolDifference <br> today and embark on a journey of academic 
                                 excellence, personal growth, and endless possibilities.<br> </p>
@@ -205,7 +214,10 @@
 
 
 
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
