clint changes number add

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <img class="slider-img" src="Images/students/std1.jpeg" class="d-block " alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img class="slider-img" src="Images/pstd.jpeg" class="d-block " alt="...">
+                            <img class="slider-img" src="Images/ss3.JPG" class="d-block " alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev m-5 slider-btn" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -197,8 +197,8 @@
                     <!-- Footer Section Start-->
                         <div class="container-fluid footer-sec">
                             <h2>Enter to Learn Leave to Serve </h2>
-                            <h1>Mariam International Publich School</h1><br><br>
-                            <p>Discover the MariamInternational Publich SchoolDifference <br> today and embark on a journey of academic 
+                            <h1>Mariam International Public School</h1><br><br>
+                            <p style="font-size: 26px; color: black;">Discover the Mariam International Public School Difference <br> today and embark on a journey of academic 
                                 excellence, personal growth, and endless possibilities.<br> </p>
                         </div>
                     <!-- Footer Section Complete-->
