--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,9 @@
                             <p style="font-size: 20px;"><i class="fa fa-phone" style="font-size:30px; color: black;"></i> <span style="font-weight: 900;"> 03325493577</span> Mon - Sat 8am to 2pm
                             </p>
 
+                            <p style="font-size: 20px;"><i class="fa fa-phone" style="font-size:30px; color: black;"></i> <span style="font-weight: 900;"> 03122035609</span> Mon - Sat 8am to 2pm
+                            </p>
+
                             <p style="font-size: 16px;"><i class="fa fa-envelope" style="font-size:30px; color: black;"></i> <span style="font-weight: 900;"> 
                                 MIPSKALLAR@GMAIL.COM</span> Send us your query anytime!
                             </p>
